base/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jenkins
  
spec:
  replicas: 1
  selector: {}
  template:
    metadata: {}
    spec:
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          resources: {}
          ports:
            - name: http
              containerPort: 8080
            - name: jnlp
              containerPort: 50000
          livenessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
            - name: jenkins-plugins-data
              mountPath: /var/jenkins_home/plugins
            - name: logging-config
              mountPath: /tmp/logging.properties
              subPath: logging.properties
            - name: jenkins-cache
              mountPath: /tmp/jenkins
            #- name: fonts-cache
            #  mountPath: /usr/share/fonts
      volumes:
        - name: jenkins-data
          emptyDir: {}
        - name: jenkins-plugins-data
          emptyDir: {}
        - name: logging-config
          configMap:
            name: logging-config
        - name: jenkins-plugin-manager
          emptyDir: {}
        - name: jenkins-cache
          emptyDir: {}
        #- name: fonts-cache
        #  emptyDir: {}
