base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: jnlp
      protocol: TCP
      port: 50000
      targetPort: 50000
