base/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins-dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: jenkins.local.k3d
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
